[package]
edition = "2021"
name = "dummy"
version = "0.1.0"

[dev-dependencies]
# Core rustlings dependency
rustlings = "6.5.0"

# Common utilities often used with rustlings
anyhow = "1.0"
assert_cmd = "2.0"
fs_extra = "1.3"
insta = {version = "1.29", features = ["redactions"]}
lazy_static = "1.4"
predicates = "2.1"
regex = "1.7"
semver = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.3"
toml = "0.8"
toml_edit = "0.22"
uuid = {version = "1.4", features = ["v4"]}
walkdir = "2.3"
which = "4.4"
zip = "2.0"
zstd = "0.13"

# Cargo tools (selected to avoid conflicts)
cargo_metadata = "0.23"
cargo_toml = "0.22"
cargo-lock = "11.0"
cargo-platform = "0.3"
